--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,5 @@
-name = "main-worker"
-type = "javascript"  # Even though you're deploying static assets, this is required
+name = "etf-u-blokadi"        # Replace with your desired project name
+type = "webpack"                 # or "javascript", depending on your setup
 
-[site]
-bucket = "./dist/etf-u-blokadi/browser"  # Update this path to match your build output folder
-entry-point = "workers-site"
+# For Cloudflare Pages deployments, add:
+pages_build_output_dir = "dist/etf-u-blokadi"  # The folder containing your built static files
