--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/localize": "^19.1.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
