--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fastify": "^5.2.1",
     "fastify-cors": "^6.0.3",
     "fastify-helmet": "^7.0.1",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
