Add proxy configuration and implement donations API with scraping functionality

--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,7 @@
               "zone.js/testing",
               "@angular/localize/init"
             ],
+            "proxyConfig": "proxy.conf.json",
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
