--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.0.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "fastify": "^5.2.1",
     "fastify-cors": "^6.0.3",
