--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^5.3.3",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fastify": "^5.2.1",
